tooling/nargo_cli/tests/snapshots/compile_failure/unary_not_on_field_type_variable/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Types in a binary operation should match, but found Field and u32
  ┌─ src/main.nr:3:15
  │
3 │     assert_eq(!0, num);
  │               -------
  │

Aborting due to 1 previous error
