tooling/nargo_cli/tests/snapshots/compile_failure/unary_not_on_field_type_variable/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Types in a binary operation should match, but found Field and u32
  ┌─ src/main.nr:3:15
  │
3 │     assert_eq(!0, num);
  │               -------
  │

Aborting due to 1 previous error
